Archive2/f2/c73492b27d5a9a/output
+ g++-4.8 -std=c++03 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function 'int main()':
main.cpp:18:29: warning: ISO C++ forbids compound-literals [-Wpedantic]
     xx.push_back(((ca){10,20}));
                             ^
main.cpp:26:9: error: cannot declare reference to 'TR {aka const int&}'
     TR& v = 1;
         ^
main.cpp:26:9: warning: unused variable 'v' [-Wunused-variable]
